--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
+theme:forty_jekyll_theme
 # site settings
 title: Forty
 subtitle: by HTML5 UP
 email: youremailaddress@gmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
-baseurl: "/forty_jekyll_theme" # the subpath of your site, e.g. /blog
+# baseurl: "/forty_jekyll_theme" # the subpath of your site, e.g. /blog
 url: lichenlei.com
 # author:
 # street_address: 1234 Somewhere Road
