--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme:forty_jekyll_theme
+
 # site settings
 title: Living a happy life
 subtitle: by lcl
@@ -15,23 +15,25 @@ url: lichenlei.com
 # phone: (716) 555-5555
 
 # homepage tiles
-tiles-source: posts # accepts "posts" or "pages"
-tiles-count: 6
+# tiles-source: posts # accepts "posts" or "pages"
+# tiles-count: 6
 
 # social settings
-500px_url:
-facebook_url:
-github_url:
-gitlab_url: https://gitlab.com/u/andrewbanchich
-googleplus_url: https://plus.google.com/u/0/+AndrewBanchich
-instagram_url: https://instagram.com
-linkedin_url: https://www.linkedin.com/in/andrew-banchich-a4ba1195
-pinterest_url:
-slack_url:
-twitter_url: https://twitter.com/andrewbanchich
+# 500px_url:
+# facebook_url:
+# github_url:
+# gitlab_url: https://gitlab.com/u/andrewbanchich
+# googleplus_url: https://plus.google.com/u/0/+AndrewBanchich
+# instagram_url: https://instagram.com
+# linkedin_url: https://www.linkedin.com/in/andrew-banchich-a4ba1195
+# pinterest_url:
+# slack_url:
+# twitter_url: https://twitter.com/andrewbanchich
 
 # build settings
 markdown: kramdown
 
 sass:
   style: compressed
+
+theme: forty_jekyll_theme
