--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ url: lichenlei.com
 # phone: (716) 555-5555
 
 # homepage tiles
-# tiles-source: posts # accepts "posts" or "pages"
-# tiles-count: 6
+tiles-source: posts # accepts "posts" or "pages"
+tiles-count: 6
 
 # social settings
 # 500px_url:
