--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ url: lichenlei.com
 # phone: (716) 555-5555
 
 # homepage tiles
-tiles-source: posts # accepts "posts" or "pages"
+tiles-source: pages # accepts "posts" or "pages"
 tiles-count: 6
 
 # social settings
