--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ exclude:
 # Site settings
 title: Airspace
 subtitle: "A free HTML5 agency template"
-url: "lichenlei.com" # the base hostname & protocol for your site
+# url: "lichenlei.com" # the base hostname & protocol for your site
 # baseurl: "/the/subpath/of/your/site" # Set this value to "" if you want your site to be root
-baseurl: "/"
+# baseurl: "/"
 cover: "/assets/cover.png"
 logo: "/assets/logo.png"
 
