--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ subtitle: "A free HTML5 agency template"
 # url: "lichenlei.com" # the base hostname & protocol for your site
 # baseurl: "/the/subpath/of/your/site" # Set this value to "" if you want your site to be root
 # baseurl: "/"
-cover: "/assets/cover.png"
-logo: "/assets/logo.png"
+# cover: "/assets/cover.png"
+# logo: "/assets/logo.png"
 
 # Build settings
 markdown: kramdown
